[project]
name = "pygtrie"
version = "2.5.0"
description = "A pure Python trie data structure implementation."
authors = [
    {name = "Michal Nazarewicz", email = "mina86@mina86.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["trie", "prefix tree", "data structure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls]
Homepage = "https://github.com/mina86/pygtrie"
Downloads = "https://github.com/mina86/pygtrie/tarball/v2.5.0"
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.3.0",
]
